--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "@app/backend",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -9,11 +9,14 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
+    "http-errors": "^1.8.0",
+    "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "validator": "^13.6.0"
   },
   "scripts": {
     "serve": "nodemon src/app.js"
