--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "path": "^0.12.7",
     "util": "^0.12.4",
     "validator": "^13.6.0"
   },
