--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
     "http-errors": "^1.8.0",
+    "http-exception": "^0.0.2",
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
