--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,12 +1,11 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-
+.png
 # testing
 /coverage
+/dist
 
 # production
 /build
@@ -17,7 +16,14 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+logs/
+
+uploads/
+docs/
+
+.vscode/
